[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
itertools = "0.10.5"
rayon = "1.5.1"
regex = "1.5.4"
